Name:           autolib-util
Version:        1.1
License:        GPL
Author:         Mirko Rahn, Alf Richter, Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       Testing
Build-Depends:  
        base >= 4 && < 4.4,
        array >= 0.2 && < 0.4,
        process >= 1.0 && < 1.1,
        random >= 1.0 && < 1.1,
        mtl >= 1.1 && < 1.2,
        parsec >= 2 && < 4,
        haxr >= 3000.7 && < 3000.8,
        autolib-data >= 1.1 && < 1.2,
        autolib-todoc >= 1.1 && < 1.2,
        autolib-reader >= 1.1 && < 1.2
Synopsis:       utilities (this package is too large)
Exposed-modules:
	Autolib.Ana
	Autolib.Hash
	Autolib.Size
	Autolib.Depth
	Autolib.Symbol
	Autolib.Letters
	Autolib.Prime
	Autolib.Wort
	Autolib.Long
	Autolib.XmlRpc
	Autolib.FilterBound
        Autolib.Util
        Autolib.Util.BFS
        Autolib.Util.Bild
        Autolib.Util.Chmod
        Autolib.Util.Closure
        Autolib.Util.DPL
        Autolib.Util.DPL_Set
        Autolib.Util.Debug
        Autolib.Util.Doppelte
        Autolib.Util.Doppler
        Autolib.Util.Edit
        Autolib.Util.Factor
        Autolib.Util.Faktor
        Autolib.Util.Fix
        Autolib.Util.Generate
        Autolib.Util.Hamming
        Autolib.Util.Hide
        Autolib.Util.Mehrfache
        Autolib.Util.Perm
        Autolib.Util.RandoM
        Autolib.Util.Seed
        Autolib.Util.Size
        Autolib.Util.Sort
        Autolib.Util.Splits
        Autolib.Util.Teilfolgen
        Autolib.Util.Uniq
        Autolib.Util.Wort
        Autolib.Util.Zufall
hs-source-dirs:	.
ghc-options: -fglasgow-exts
extensions: TypeSynonymInstances, ScopedTypeVariables, FlexibleContexts, 
	    IncoherentInstances, OverlappingInstances, UndecidableInstances
build-type: Simple



